[package]
name = "async-backtrace-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.66"
chashmap = "2.2"
once_cell = "1.14"
rand = { version = "0.8", features = ["small_rng"] }  # no-std, so no allocation
wyhash = "0.5.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
moka = "0.9"

[profile.bench]
strip = "none"
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1