[package]
name = "ying-profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "^0.3"
coarsetime = "^0.1"
chrono = "0.4.0"
# This is custom dashmap that uses hashbrown using System allocator, not global.  Removes most allocations
# to make our lives easier
dashmap = { git = "https://github.com/velvia/dashmap", rev = "a6e36242044f86412531c24c437e95beadc67b62"}
libc = "0.2.162"
log = "^0.4"
once_cell = "1.14"
regex = "^1.6"
wyhash = "0.5.0"
tracing = { version = "^0.1.30", optional = true }

[dev-dependencies]
futures = "^0.3"
moka = "0.9"
rand = { version = "0.8", features = ["small_rng"] }  # no-std, so no allocation
serial_test = "0.9.0"
tokio = { version = "1.20.1", features = ["full"] }
tracing-subscriber = "0.3"

[features]
profile-spans = ["tracing"]

[profile.bench]
strip = "none"
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1